Two-Step Consecutive Reaction Mechanism

--- a/preamble.tex
+++ b/preamble.tex
@@ -62,10 +62,10 @@
 \newcommand{\e}[1][]{\text{e}^{#1}}
 \newcommand{\prb}[1]{\left\langle{#1}\right\rangle}
 \NewDocumentCommand{\Longleftrightarrows}{O{}O{}}{\tikz[baseline=-1mm]{
-    \node at (0,0.4) {\small${#1}$};
+    \node at (0,0.4) {\scriptsize${#1}$};
     \node at (0,0.1) {$\Longrightarrow$};
     \node at (0,-0.1) {$\Longleftarrow$};
-    \node at (0,-0.4) {\small${#2}$};
+    \node at (0,-0.4) {\scriptsize${#2}$};
 }}
 
 \usepackage{subfiles}
