Problem Set 3 (Questions)

--- a/PSets/PSet2/pset2.tex
+++ b/PSets/PSet2/pset2.tex
@@ -363,6 +363,7 @@
 \begin{proof}[Answer]
     I would like to discuss and build upon Problem 28-25, which begins the process of intuitively rationalizing the rate law for a reaction that is first-order in each reactant and second-order overall. Another way that we can think about it is by noting that by their coefficients, the concentrations of \ce{A} and \ce{B} decrease by the same amount $x$ with each passing instant. We note that because of the structure of the fraction on the right-hand side of the equation, as $x\to[\ce{B}]$, the change in the denominator will begin to play an outsized role in determining the value of the fraction. This tempers the rate at which $[\ce{A}],[\ce{B}]$ can change, reflecting the fact that the change in concentration/reaction rate will slow down as one component or the other gets close to being exhausted. Another pattern we can observe is what happens to the rate if we double both initial concentrations. In this case, the fraction out front would change (assuming $[\ce{A}]_0\neq[\ce{B}]_0$), but the fraction within the logarithm would not. This reflects the fact that the initial rate would double, but the curve will be essentially the same, just stretched. Continuing on in such a manner, I believe I gain a better and better understanding for why this equation has such an at-first strange form.
 \end{proof}
+\setcounter{equation}{0}
 
 
 
