--- a/main.bib
+++ b/main.bib
@@ -21,3 +21,11 @@
     url       = {https://github.com/shadypuck/APChemNotes/blob/master/main.pdf},
     urldate   = {2022-01-11}
 }
+
+@book{bib:CRCTables,
+    title     = {{CRC} Standard Mathematical Tables and Formulae},
+    editor    = {Daniel Zwillinger},
+    year      = {2003},
+    publisher = {Chapman \& Hall/CRC},
+    edition   = {31st}
+}
